# customer-support-agentic-rag

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
src/: config.py
src/api/: main.py
src/api/static/: index.html  script.js  styles.css
src/graph/: answer_check_node.py  answer_node.py  docs_grader_node.py  graph.py  question_check_node.py  retriever_node.py  state.py  topic_check_node.py
src/indexing/: preprocess.py
