[project]
name = "customer-support-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.2.0",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.15",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "sentence-transformers>=3.4.0",
]
